src/index.css
@media (prefers-color-scheme: light) {
  * {
    --textColour: #000000;
    --secondTextColour: #FFFFFF; 
    --lightPrimaryColour: #9756D8; 
    --primaryColour: #5827B8;
    --darkPrimaryColour: #280749;
    --secondaryColour: #00D0FE;
    --background: url('./assets/images/bkg.svg');
  }

  .partner-wrapper { 
    border: none; 
    border-radius: 0px;  
    background-color: none; 
  }

  #partner-heading {
    border-bottom: 1px solid var(--lightPrimaryColour);
  }

}

@media (prefers-color-scheme: dark) {
  * {
    --textColour: #ffffff;
    --secondTextColour: #FFFFFF; 
    --lightPrimaryColour: #9756D8; 
    --primaryColour: #5827B8;
    --darkPrimaryColour: #280749;
    --secondaryColour: #00D0FE;
    --background: url('./assets/images/bkgdark.svg'); 
  }

  .partner-wrapper { 
    border: 3px solid var(--lightPrimaryColour); 
    border-radius: 10px; 
    background-color: rgba(255, 255, 255, 1);
  }
  
  #partner-heading {
    border-bottom: none; 
  }

}

a {
  text-decoration: none; 
  font-size: inherit; 
  font-family: inherit;
}

html, body {
  overflow-x: hidden;
  width: 100vw; 
  min-width: 335px;
  margin: 0;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  scroll-behavior: smooth; 
}

* {
  font-family: 'Reem Kufi', sans-serif; 
}

input {
  -webkit-appearance: none; 
  -moz-appearance: none;  
}

input:focus {
  outline: none; 
}

.footer {
  position: relative;
  left: 0;
  bottom: 0;
}

#root {
  background-image: var(--background); 
  background-size: cover;
  background-position: bottom;
}

.navbar-parent {
  position: absolute;
  top: 0;
  left: 0;
  margin: auto;
  width: 100%;
  display: flex;
  justify-content: center;
  z-index: 10; 
}

.navbar {
  align-items: center; 
  display: flex; 
  justify-content: space-between; 
  margin: 15px 150px;
  width: 90%;
  max-width: 1024px;
}

.toggle {
  cursor: pointer; 
}

.nav-links {
  display: flex; 
  justify-content: flex-end;
}

.nav-links > li {
  list-style-type: none;  
}

.nav-item {
  cursor: pointer; 
  color: var(--textColour);
  margin-right: 30px; 
  border-bottom: var(--darkPrimaryColour) 2px solid;  
  text-align: right; 
}

.nav-item:hover {
  border-bottom-color: var(--secondaryColour); 
}

.navbar .toggle {
  display: none; 
}

.nav-logo {
  width: 120px;   
}

/* Slide Rules */

.slide-wrapper {
  display: flex; 
  flex-direction: column; 
  justify-content: flex-start; 
  align-items: center; 
  padding-top: 100px; 
  width: 100%; 
}

.slide {
  display: flex; 
  flex-direction: column; 
  justify-content: center; 
  align-items: center; 
  width: 90%;
  max-width: 1024px;
}

/* Landing Page */ 

.landing {
  margin-bottom: 150px;
}

.landing-logo {
  width: 50vh; 
}

.landing-top {
  display: flex;
  width: 100%;
  align-items: center;
  justify-content: space-between;
}

.landing-top-left {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 50vw;
  max-width: 512px;
}

.landing-bottom {
  display: flex; 
  align-items: flex-end;
  align-content: center;
  justify-content: flex-end;
  width: 100%; 
}

.landing-date {
  min-width: 40%;
  margin-right: -50px;
}

/* Heading Styles */ 
.custom-header { 
  color: var(--textColour);
  align-content: center; 
  display: flex; 
  flex-direction: row; 
  text-align: left; 
  font-family: 'Reem Kufi', sans-serif; 
  font-style: normal;
  font-weight: normal; 
  font-size: 32px; 
  width: 100%; 
}

.custom-header > p {
  margin-top: 40px; 
  margin-bottom: 0; 
}

/* Bar (footer, timer) Styles*/ 
.bar-wrapper {
  font-family: 'Reem Kufi', sans-serif;
  display: flex; 
  flex-direction: row; 
  justify-content: space-around;
  align-items: center; 
  height: 100px; 
  width: 100vw; 
  background-color: var(--darkPrimaryColour);
  color: var(--secondTextColour); 
}

.bodyText {
  font-family: 'Montserrat', sans-serif;
  color: var(--textColour);
}

.timer-wrapper {
  font-size: 30px;
  justify-content: center; 
}

#timer { 
  font-size: 50px; 
}

#footer-purple { 
  color: var(--lightPrimaryColour); 
}

.mailtoLink {
  color: var(--lightPrimaryColour);
}

/* Freqently Asked Questions */ 
.faq-questions-wrapper { 
  display: flex; 
  width: 100%; 
  justify-content: space-between;
}

.faq-question {
  display: flex; 
  align-items: flex-end; 
}

.faq-question > h2 {
  margin: 0; 
}

/* Sponsors */ 
.sponsor-wrapper {
  display: flex; 
  flex-direction: column; 
  flex-wrap: wrap;
}

.sponsor-tier {
  display: flex;
  flex-direction: row;
  justify-content: center; 
  align-items: baseline; 
}

.sponsor-img {
  padding: 10px; 
}

.tera img {
  max-height: 250px;
  width: 500px;
}

.giga img {
  max-height: 250px;
  width: 500px; 
}

.mega img {
  flex-wrap: wrap; 
}

.mega img {
  max-height: 200px; 
  width: 300px;  
}

.kilo img {
  max-height: 150px;
  width: 100px; 
}

/* Partners */ 

.partner-wrapper {
  margin-bottom: 150px; 
  display: flex; 
  flex-direction: row; 
  align-items: center; 
}

.partner-img {
  max-height: 150px;
  padding: 20px; 
}

#partner-heading {
  margin: 0; 
  padding-left: 20%; 
  padding-right: 20%;
  padding-bottom: 10px;  
}

#SCSLogo, #SCELogo{
  width: 250px;
}

#MLHLogo {
  width: 150px;
}

/* These properties are specified by MLH's brand guidelines, don't touch them. */ 
#MLHBanner {
  width: 100%; 
}

#mlh-trust-badge {
  display:block;
  max-width: 90px;
  min-width:60px;
  position:fixed;
  right:60px;
  top:0;
  width:10%;
  z-index:10000;
}

@media (orientation: portrait) {

  .partner-wrapper {
    flex-direction: column; 
  }

  .landing-logo {
    width: 80vw;
  }

  .landing-top {
    flex-direction: column;
  }

  .landing-top-left {
    max-width: unset;
  }

  .landing-bottom {
    flex-direction: column-reverse;
    flex-wrap: wrap; 
    align-items: center; 
  }

  .footer {
    height: auto; 
    color: var(--secondTextColour); 
    display: flex; 
    flex-direction: column;
    justify-content: space-between;
  }

  .nav-links {
    opacity: 0;
  }

}

